# personnel-locale

./: Cargo.toml  LICENSE  README.md  test.ftl
src/: lib.rs
