[package]
name = "personnel-locale"
version = "0.1.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
keywords = ["fluent-rs", "projectfluent", "locale", "localization", "localizer"]
description = "Simple wrapper for fluent crate."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }
